--- a/css/buttonmenu.css
+++ b/css/buttonmenu.css
@@ -71,7 +71,7 @@
     margin-bottom: 10px;
 }
 .button-menu_button:hover {
-    background-color: #f0f0f0;
+    background-color: #3295ce;
     box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
 }
 .button-menu_tooltip {
