--- a/css/footer.css
+++ b/css/footer.css
@@ -145,3 +145,43 @@
     align-items: center;
     display: flex;
 }
+/* Mobile Styles */
+@media (max-width: 768px) {
+    .footer_top-inner,
+    .footer_main-inner {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+  
+    .footer_main-col {
+      width: 100%;
+      text-align: center;
+    }
+  
+    .footer_dropdown-toggle {
+      display: block;
+      width: 100%;
+      padding: 10px 0;
+      text-align: center;
+    }
+  
+    .footer_dropdown {
+      width: 100%;
+      margin-bottom: 10px;
+    }
+  
+    .footer_dropdown-arrow {
+      display: none;
+    }
+  
+    .lang_dropdown {
+      margin-top: 20px;
+      width: 100%;
+      text-align: center;
+    }
+  
+    .footer_logo-link {
+      margin-bottom: 20px;
+    }
+  }
