--- a/css/index.css
+++ b/css/index.css
@@ -17,6 +17,9 @@ body {
 }
 .boxi{
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    position: sticky; top: 0;
+    z-index: 1000;
+    background-color: white;
 }
 
 .logo-container {
